Backporting an IE fix for the Masthead header on Smaller breakpoint
But doesn't fix it fully

--- a/Breakpoints.css
+++ b/Breakpoints.css
@@ -171,6 +171,7 @@ width:100%;
 
 .mpisto-userpages-header .mpisto-profile-masthead section {
 	width:100%!important;
+	flex:none!important;
 }
 
 .mpisto-option-pane {
